<resources>
    <string name="app_name">FLYBY</string>
    <string name="not_registered_yet_register_here">Not registered yet? </string>
    <string name="sign_in">SIGN IN</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="by_signing_in_you_agree_to_all_the_terms_amp_conditions">By Signing In, you agree to<font fgcolor='#FF97FD86'><u>Terms &amp; Conditions</u></font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_and_manage_all_your_bikes_and_documents_in_one_place">Add and manage all your \nbikes and documents \nin one place</string>
    <string name="discover_upgrades_parts_gears_and_offer_specific_to_your_bike_model">Discover Upgrades, Parts, \nGears and offer specific to \nyour Bike Model</string>
    <string name="find_garages_repair_shops_workshops_and_other_essential_bike_services_near_you">Find Garages, repair shops, \nworkshops and other \nessential bike services near \nyou</string>
    <string name="create_and_manage_rides_trips_with_your_fellow_riders_or_just_for_yourself"><![CDATA[Create and manage Rides & \ntrips with your fellow riders \nor just for yourself]]></string>
    <string name="my_garage"> My Garage </string>
    <string name="rides">\tRIDES\t</string>
    <string name="discover"> DISCOVER </string>
    <string name="LOCKER">DOCUMENT\nLOCKER</string>
    <string name="Cards">Add RCs, DLs, Service Receipts,\nWarranty Cards etc.</string>
    <string name="you_can_add_documents_for_your_bike_here_n_but_first_you_need_to_add_a_bike_to_your_garage">You can add documents for your bike here.\n But first you need to add a bike to your garage.</string>
    <string name="save_document">SAVE DOCUMENT</string>
    <string name="progress_title">Processing..</string>
    <string name="done">NEXT</string>


    <string-array name="tab_titles">
        <item>PHOTO</item>
        <item>GALLERY</item>
    </string-array>


    <string name="toolbar_title">Choice Image</string>
    <string name="no_image">No Documents</string>


    <string name="max_count_msg">%1$d images selected already</string>
    <string name="min_count_msg">you have to choice %1$d images</string>

    <string name="focusing">focusing/flash...wait a minute</string>


    <string name="default_directory">Pictures</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="share_photos_and_videos_of_this_ride">Share photos and videos of this ride</string>
    <string name="add_members_to_this_ride">Add members to this ride</string>
    <string name="schedule_for_later">SCHEDULE FOR LATER</string>
    <string name="start_ride">START RIDE</string>
    <string name="starting_point">Starting Point</string>
    <string name="average_speed">Average Speed</string>
    <string name="ride_time">Ride Time[HH:MM:SS]</string>
    <string name="top_speed">Top Speed</string>
    <string name="distance_covered">Distance Covered</string>
    <string name="end_ride">END RIDE</string>
    <string name="add_upto_50_members_upgrade_to_premium">Add upto 50 members -<font fgcolor='#FF97FD86'>UPGRADE TO PREMIUM</font></string>
    <string name="phone_contacts">PHONE CONTACTS</string>
    <string name="contacts_on_flyby">CONTACTS ON FLYBY</string>
    <string name="invite_new_member">Invite new member</string>
    <string name="remove_member">Delete This Ride</string>
    <string name="rename_ride">Rename Ride</string>
    <string name="ride_name">Ride Name</string>
    <string name="update">UPDATE</string>
    <string name="pay_amp_upgrade"><![CDATA[PAY & UPGRADE]]></string>
    <string name="basic_account">Basic Account</string>
    <string name="add_1_bike_to_your_garage">Add 1 bike to your garage</string>
    <string name="add_upto_3_rides">Add upto 3 RIdes</string>
    <string name="free">FREE</string>
    <string name="premium_account">Premium Account</string>
    <string name="add_unlimited_bikes_to_your_garage">Add Unlimited bikes to your garage</string>
    <string name="unlimited_rides">Unlimited Rides</string>
    <string name="_2_gb_storage_per_ride">2 GB storage per ride</string>
    <string name="rs_999_lifetime">Rs. 999 / - Lifetime</string>
    <string name="premium_user">You are now premium user</string>
    <string name="sub">You Have Added 5 Of 5 Members To This Ride.Upgrade To PREMIUM To Add Up To 50 Members To Ride.</string>
    <string name="sub_">You Have Added 1 Bike To Your Garage.Upgrade To PREMIUM To Add Up To Unlimited Bike To Garage.</string>
    <string name="view_plan_details">VIEW PLAN DETAILS</string>
    <string name="rupee">₹</string>
    <string name="upgrades_for_your_bike">Upgrades For You</string>
    <string name="ENDING_POINT">ENDING POINT</string>
    <string name="discover_top_service_providers_nin_these_categories">Discover top service providers\nin these categories:</string>
    <string name="distance">Distance</string>
    <string name="a_z">A-Z</string>
    <string name="no_advertisement_found">No Advertisement Found</string>
    <string name="no_media_file_found">No Media File Found</string>
    <string name="grant_location_permission">Grant Location Permission</string>
    <string name="go_to_settings_app_permissions_and_grant_location_access_to_tropogo"><![CDATA[Go to SETTINGS>APP PERMISSIONS, and grant location access to TropoGo]]></string>
    <string name="unable_to_proceed">Sorry, we were unable to proceed</string>
    <string name="just_a_minute">We need your location access to give you the best quotes. It’ll take just a minute.</string>
    <string name="SETTINGS">SETTINGS</string>

    <string name="one_place_to_manage_all_your_rides_fellow_riders_amp_ntheir_location_media_and_trip_information"><![CDATA[One place to manage all your rides, fellow riders & their location, media and trip information]]></string>
    <string name="my_account">My Account</string>
    <string name="add_maximum_1_bike_to_garage">Add Maximum 1 bike to Garage</string>
    <string name="add_maximum_3_rides_0_5_gb_per_ride">Add Maximum 3 Rides - 0.5 GB per ride</string>
    <string name="maximum_5_members_per_ride">Maximum 5 members per ride</string>
    <string name="_50_members_per_ride">50 members per ride</string>
    <string name="unlimited_rides_2_gb_per_ride">Unlimited Rides - 2 GB per ride</string>
    <string name="add_unlimited_bikes_to_garage">Add Unlimited bikes to Garage</string>
    <string name="registered_number">Registered Number</string>
    <string name="customer_support">Customer Support</string>
    <string name="rate_app_on_playstore">Rate App on Playstore</string>
    <string name="logout">Logout</string>
    <string name="view_premium_plan">VIEW PREMIUM PLAN</string>
    <string name="posted_by">POSTED BY</string>
    <string name="trun_off_battery_optimization">TRUN OFF battery optimization</string>
    <string name="in_the_battery_optimization_settings_select_all_apps_and_then_find_flyby_in_the_list_and_disable_battery_optimization">In the battery optimization settings,select \'All apps\' and then find \'FLYBY\' in the list and disable battery optimization.</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="you_have_create_3_of_3_free_rides_available_in_the_basic_plan_please_upgrade_you_plan_to_premium_or_delete_old_rides">You have create 3 of 3 Free Rides Available in the basic plan.Please Upgrade you plan to Premium or Delete old rides.</string>
    <string name="can_t_find_your_bike_model_n_let_us_know_on_whatsapp">Can’t find your bike model?\n Let us know on our <font fgcolor='#FF97FD86'>Whatsapp</font>.</string>
</resources>
