<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/edittext_bg">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rename_ride"
                android:textSize="18dp"
                android:fontFamily="@font/manropeextrabold"
                android:textColor="#FFFFFF"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/close_rename_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/manropeextrabold"
                android:textColor="#FFFFFF"
                android:layout_margin="20dp"/>

        </RelativeLayout>



        <EditText
            android:id="@+id/update_rename_ride"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:hint="@string/ride_name"
            android:backgroundTint="@color/light_green"
            android:layout_marginStart="20dp"
            android:textColor="@color/light_green"
            android:textSize="18dp"
            android:singleLine="true"
            android:fontFamily="@font/manroperegular"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/update_tv"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:text="@string/update"
            android:gravity="center"
            android:fontFamily="@font/avenirnextheavy"
            android:textSize="18dp"
            android:textColor="@color/deep_purpel"
            android:background="@drawable/green_btn_ripple_botton"/>

    </LinearLayout>

</LinearLayout>