<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_base"
    tools:context=".Ui.Activity.InviteNewMember">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/Back_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:neumorph_lightSource="leftBottom"
            android:visibility="visible"
            app:neumorph_strokeWidth="2dp"
            app:neumorph_strokeColor="#29252E"
            app:neumorph_shadowColorDark="#1FFFFFFF"
            app:neumorph_shadowColorLight="#000000"
            app:neumorph_shadowElevation="4dp"
            app:neumorph_shapeType="flat"
            >


        <RelativeLayout
                    android:id="@+id/Back_Btn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/round_drak"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_back" />
                </RelativeLayout>
        </soup.neumorphism.NeumorphCardView>

        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/invite_new_member"
                android:fontFamily="@font/avenirnextbold"
                android:textSize="18dp"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:drawableEnd="@drawable/ic_search"
                android:paddingLeft="2dp"
                android:layout_marginEnd="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#fff" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:scrollbarThumbVertical="@color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:fontFamily="@font/avenirnextbold"
                    android:layout_marginStart="25dp"
                    android:text="@string/contacts_on_flyby"/>

                <ListView
                    android:id="@+id/Flyby_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    android:fontFamily="@font/avenirnextbold"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_contacts"/>

                <ListView
                    android:id="@+id/Not_Flyby_user"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:scrollbars="none"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </ScrollView>
    </LinearLayout>

</LinearLayout>