<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2.4"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_covered"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:fontFamily="@font/avenirbextregular"
                        android:textColor="#AEACB5"/>
                    <TextView
                        android:id="@+id/distance_covered_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:textSize="16sp"
                        android:fontFamily="@font/avenirnextbold"
                        android:textColor="#fff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/top_speed"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:fontFamily="@font/avenirbextregular"
                        android:textColor="#AEACB5"/>
                    <TextView
                        android:id="@+id/top_speed_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:fontFamily="@font/avenirnextbold"
                        android:textColor="#fff"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ride_time"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:fontFamily="@font/avenirbextregular"
                        android:textColor="#AEACB5"/>
                    <TextView
                        android:id="@+id/ride_time_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:fontFamily="@font/avenirnextbold"
                        android:textColor="#fff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/average_speed"
                        android:gravity="center"
                        android:textSize="14dp"
                        android:fontFamily="@font/avenirbextregular"
                        android:textColor="#AEACB5"/>
                    <TextView
                        android:id="@+id/average_speed_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:textSize="16sp"
                        android:fontFamily="@font/avenirnextbold"
                        android:textColor="#fff"/>


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:gravity="center|end">

            <LinearLayout
                android:id="@+id/Track_record"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/base_round_ripple"
                android:gravity="center">

                <ImageView
                    android:id="@+id/Track_IV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>